; ModuleID = '/home/carl/AnghaBench/linux/drivers/gpu/drm/nouveau/nvkm/subdev/ltc/extr_base.c_nvkm_ltc_intr.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/gpu/drm/nouveau/nvkm/subdev/ltc/extr_base.c_nvkm_ltc_intr.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.nvkm_subdev = type { i32 }
%struct.nvkm_ltc = type { %struct.TYPE_2__* }
%struct.TYPE_2__ = type { i32 (%struct.nvkm_ltc*)* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.nvkm_subdev*)* @nvkm_ltc_intr to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @nvkm_ltc_intr(%struct.nvkm_subdev* %0) #0 {
  %2 = alloca %struct.nvkm_subdev*, align 8
  %3 = alloca %struct.nvkm_ltc*, align 8
  store %struct.nvkm_subdev* %0, %struct.nvkm_subdev** %2, align 8
  %4 = load %struct.nvkm_subdev*, %struct.nvkm_subdev** %2, align 8
  %5 = call %struct.nvkm_ltc* @nvkm_ltc(%struct.nvkm_subdev* %4)
  store %struct.nvkm_ltc* %5, %struct.nvkm_ltc** %3, align 8
  %6 = load %struct.nvkm_ltc*, %struct.nvkm_ltc** %3, align 8
  %7 = getelementptr inbounds %struct.nvkm_ltc, %struct.nvkm_ltc* %6, i32 0, i32 0
  %8 = load %struct.TYPE_2__*, %struct.TYPE_2__** %7, align 8
  %9 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %8, i32 0, i32 0
  %10 = load i32 (%struct.nvkm_ltc*)*, i32 (%struct.nvkm_ltc*)** %9, align 8
  %11 = load %struct.nvkm_ltc*, %struct.nvkm_ltc** %3, align 8
  %12 = call i32 %10(%struct.nvkm_ltc* %11)
  ret void
}

declare dso_local %struct.nvkm_ltc* @nvkm_ltc(%struct.nvkm_subdev*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
